--- a/latex/main.tex
+++ b/latex/main.tex
@@ -13,7 +13,7 @@
 \pagestyle{fancy}
 
 \fancyhead{}
-\fancyhead[R]{Optimalizace fotovoltaických elektráren}
+\fancyhead[R]{Optimalizace výnosu fotovoltaických elektráren}
 \fancyhead[L]{Petr Kotlan}
 
 \fancyfoot{}
@@ -22,60 +22,57 @@
 \renewcommand{\footrulewidth}{0.4pt}
 
 \author{Petr Kotlan}
-\title{Optimalizace fotovoltaických elektráren}
+\title{Optimalizace výnosu fotovoltaických elektráren}
 \date{}
 
 \begin{document}
 
 \maketitle
 \tableofcontents
-\addcontentsline{toc}{section}{Přehled}
-\addcontentsline{toc}{section}{Anotace}
-\addcontentsline{toc}{section}{Odkazy}
 
 \pagebreak
 
 
-\section*{Přehled}
+\section{Přehled}
 
 \begin{itemize}
-    \item \textbf{Název práce:} Optimalizace fotovoltaických elektráren
+    \item \textbf{Název práce:} Optimalizace výnosu fotovoltaických elektráren
     \item \textbf{Název práce ENG:} Optimization of photovoltaic power stations
     \item \textbf{Autor:} Petr Kotlan
     \item \textbf{Vedoucí práce:} Ing. Roman Vaibar
-    \item \textbf{Klíčová slova:} optimalizace, fotovoltaické elektrárny, investice/investiční prostředky, výnosnost
-    \item \textbf{Klíčová slova ENG:} optimization, photovoltaic power stations, investment/investment funds, profitability
-    \item 
+    \item \textbf{Klíčová slova:} optimalizace, simplexová metoda, fotovoltaické elektrárny, investice/investiční prostředky, výnosnost
+    \item \textbf{Klíčová slova ENG:} optimization, simplex method, photovoltaic power stations, investment/investment funds, profitability
+    \item
 
 \end{itemize}
 
 
-\section*{Anotace}
+\section{Anotace}
 
 \subsection*{Anotace cz}
-Na základě zadaných adres budov bude provedena optimalizace využití střech pro instalaci fotovoltaických elektráren a optimální rozdělení investičních prostředků z daných hledisek:
+Na základě zadaných adres budov bude provedena optimalizace využití střech pro instalaci fotovoltaických elektráren a optimální rozdělení investičních prostředků. Úloha bude převedena na úlohu lineárního programování a bude řešena simplexovou metodou. Optimalizace bude provedena na základě následujících hledisek:
 \begin{itemize}
 
     \item Typu střechy – rovná, sedlová, valbová, atd.
-    \begin{itemize}
-        \item Sklon definuje úbytek využití osvitových hodin – využijeme již vytvořené rozhraní API
-    \end{itemize}
+          \begin{itemize}
+              \item Sklon definuje úbytek využití osvitových hodin – využijeme již vytvořené rozhraní API
+          \end{itemize}
     \item Spotřeby v daném místě.
     \item Ceně energie definované odkupem dle OTE dle spotových cen viz odkaz \url{https://www.ote-cr.cz/cs/kratkodobe-trhy/elektrina/vnitrodenni-trh?date=2023-08-12}
     \item Máme známý – objem z obchodované energie a ceny v závislosti na denním čase.
-    \item Optimalizace úložiště při nabití baterií v čase „levné energie“ a dodání v čase alespoň nějakého profitu. S porovnáním investičních nástrojů v daném čase jako jsou – spořící účty, ETF fondy, dluhopisy. Určení vnitřního výnosového čísla (IRR), čisté současné hodnoty (NPV) a porovnání jednotlivých investic vůči sobě.
+    \item Optimalizace úložiště při nabití baterií v čase „levné energie“ a dodání v čase alespoň nějakého profitu. S porovnáním investičních nástrojů v daném čase jako jsou – spořící účty, ETF fondy, dluhopisy. Určení vnitřního výnosového procenta (IRR – Internal Rate of Return), čisté současné hodnoty (NPV) a porovnání jednotlivých investic vůči sobě.
     \item Výpočet předpokládaného ročního výkonu dle osvitových hodin a ekvivalentního peněžního toku na základě – fixní cena za dodání.
 
 \end{itemize}
 
 \subsection*{Anotace eng}
-Based on the given addresses of buildings, the optimization of the use of roofs for the installation of photovoltaic power plants and the optimal distribution of investment funds from the given points of view will be carried out:
+Based on the given addresses of buildings, the use of roofs for the installation of photovoltaic power plants will be optimized and the optimal distribution of investment funds. The task will be converted to a linear programming task and will be solved by the simplex method. Optimization will be performed based on the following aspects:
 \begin{itemize}
 
     \item Type of roof - flat, saddle, hipped, etc.
-    \begin{itemize}
-        \item The slope defines the loss of use of daylight hours - we will use the already created API interface
-    \end{itemize}
+          \begin{itemize}
+              \item The slope defines the loss of use of daylight hours - we will use the already created API interface
+          \end{itemize}
     \item Consumption in a given place.
     \item Energy price defined by OTE by spot prices see link \url{https://www.ote-cr.cz/cs/kratkodobe-trhy/elektrina/vnitrodenni-trh?date=2023-08-12}
     \item We know - the volume of traded energy and prices depending on the time of day.
@@ -84,10 +81,12 @@ Based on the given addresses of buildings, the optimization of the use of roofs 
 
 \end{itemize}
 
-\section*{Odkazy}
+\section{Zásady pro vypracování}
+
+    
+\section{Odkazy}
 
 \begin{itemize}
-    \item \url{https://www.ote-cr.cz/cs/kratkodobe-trhy/elektrina/vnitrodenni-trh?date=2023-08-12}
     \item \url{https://www.ote-cr.cz/cs/kratkodobe-trhy/elektrina/vnitrodenni-trh?date=2023-08-12}
 \end{itemize}
 
