--- a/latex/main.tex
+++ b/latex/main.tex
@@ -30,18 +30,18 @@
 \section{Anotace}
 
 \begin{frame}{\insertsection}
-    Cílem bakalářské práce je vyvinout aplikaci, která pomocí lineárního programování (simplexová metoda)
-    optimalizuje rozdělení investičních prostředků pro instalaci fotovoltaických elektráren na daných objektech.
-    Optimalizace bude provedena na základě následujících hledisek:
-    \begin{itemize}
+Cílem bakalářské práce je vyvinout aplikaci, která pomocí lineárního programování
+optimalizuje rozdělení investičních prostředků pro instalaci fotovoltaických elektráren na daných objektech.
+Optimalizace bude provedena na základě následujících hledisek:
+\begin{itemize}
 
-        \item Typu střechy – rovná, sedlová, valbová, atd.
-        \item Spotřeby v daném místě.
-        \item Ceně energie definované odkupem dle spotových cen \href{https://www.ote-cr.cz/cs/kratkodobe-trhy/elektrina/vnitrodenni-trh?date=2023-12-01}{OTE}.
-        \item Optimalizace uložiště.
-        \item Výpočet předpokládaného ročního výkonu dle osvitových hodin
-    
-    \end{itemize}
+    \item Typu střechy – rovná, sedlová, valbová, atd.,
+    \item spotřeby v daném místě,
+    \item ceně energie definované odkupem dle spotových cen OTE,
+    \item optimalizace uložiště,
+    \item výpočet předpokládaného ročního výkonu dle osvitových hodin.
+
+\end{itemize}
 \end{frame}
 
 \section{Osnova}
