--- a/latex/bakalarka.tex
+++ b/latex/bakalarka.tex
@@ -2,9 +2,11 @@
 
 
 \usepackage[czech]{babel}
+\usepackage{pdfpages} % for including pdf files
+\usepackage{microtype} % better text rendering
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
-\usepackage[unicode]{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage[a4paper,width=150mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage[pagestyles]{titlesec}
 \titleformat{\chapter}[display]{\normalfont\sffamily\bfseries}{}{0pt}{\Huge}
@@ -23,11 +25,12 @@ výnosu fotovoltaických elektráren}
 % \maketitle
 % \break
 \input{components/titlepage.tex}
+\includepdf[pages=-]{static/podklad_bp.pdf}
+
 \tableofcontents
 
-\pagebreak
-
-\chapter{Úvod}
+\addcontentsline{toc}{chapter}{Úvod}
+\chapter*{Úvod}
 
 \chapter{Současné modely výnosů fotovoltaických elektráren v ČR}
 
@@ -51,6 +54,7 @@ výnosu fotovoltaických elektráren}
 
 \chapter{Zhodnocení výsledků}
 
-\chapter{Závěr}
+\addcontentsline{toc}{chapter}{Závěr}
+\chapter*{Závěr}
 
 \end{document}
