--- a/latex/components/titlepage.tex
+++ b/latex/components/titlepage.tex
@@ -1,34 +1,40 @@
 \begin{titlepage}
     \begin{center}
-        \vspace*{1cm}
-            
         \Huge
-        \textbf{\textsf{Univerzita Jana Evangelisty Purkyně \\v Ústí nad Labem}}
-            
-        \vspace{0.5cm}
-        \LARGE
-        Přírodovědecká fakulta
-        
-        \vspace{2cm}
-        \includegraphics[width=0.6\textwidth]{static/PřF-UJEP-logo.png}
-        \vspace{2cm}
-            
-        \textbf{Optimalizace investičních prostředků z hlediska výnosu fotovoltaických elektráren}
-        
-        \vspace{1.5cm}
 
+        % \textbf{Univerzita Jana Evangelisty Purkyně \\v Ústí nad Labem}
+        \textbf{\textsf{\textls*[-20]{Univerzita Jana Evangelisty Purkyně \\v Ústí nad Labem}}}
+            
+        \vspace{1cm}
+        \LARGE
+        \textbf{\textsf{Přírodovědecká fakulta}}
+        
+        \vspace{2cm}
+        \includegraphics[width=0.5\textwidth]{static/PřF-UJEP-logo.png}
+        \vspace{3cm}
+            
+        \textbf{\textsf{Optimalizace investičních prostředků \\z hlediska výnosu fotovoltaických elektráren}}
+        
+        \vspace{1cm}
+
+        \large
         BAKALÁŘSKÁ PRÁCE
 
         \vfill
 
-        \begin{flushleft}
+            \begin{flushleft}
+                
+            \large
             \textbf{Vypracoval:} Petr Kotlan \\
-            \textbf{Vedoucí práce:} Ing. Roman Vaibar, Ph.D., MBA
-            
+            \vspace{0.3cm}
+            \textbf{Vedoucí práce:} Ing. Roman Vaibar, Ph.D., MBA \\
+            \vspace{1.5cm}
+            \textbf{Studijní program:} Matematika ve firmách a veřejné správě
         \end{flushleft}
 
         \vspace{1.5cm}
-
+        
+        \LARGE
         Ústí nad Labem, 2024
 
     \end{center}
