--- a/latex/bakalarka.tex
+++ b/latex/bakalarka.tex
@@ -52,9 +52,9 @@ výnosu fotovoltaických elektráren}
 
 \section{Případové studie}
 
-\chapter{Zhodnocení výsledků}
+\chapter{Zhodnocení výsledků a závěr}
 
-\addcontentsline{toc}{chapter}{Závěr}
-\chapter*{Závěr}
+\addcontentsline{toc}{chapter}{Seznam zdrojů}
+\chapter*{Seznam zdrojů}
 
 \end{document}
