--- a/latex/components/titlepage.tex
+++ b/latex/components/titlepage.tex
@@ -35,7 +35,7 @@
         \vspace{1.5cm}
         
         \LARGE
-        Ústí nad Labem, 2024
+        Ústí nad Labem 2024
 
     \end{center}
 \end{titlepage}
