--- a/latex/components/citace.tex
+++ b/latex/components/citace.tex
@@ -1,4 +1,8 @@
 \begin{thebibliography}{9}
     \bibitem{ote}
     \textit{Krátkodobé trhy}. Online. OTE. C2018. Dostupné z: \url{https://www.ote-cr.cz/cs/kratkodobe-trhy/elektrina/vnitrodenni-trh}. [cit. 2023-12-03].
+    \bibitem{matematika_pro_ekonomy}
+    STOLÍN, Radek. \textit{Matematika pro ekonomy}. 2., upr. vyd. Jihlava: Vysoká škola polytechnická Jihlava, 2011. ISBN ISBN978-80-87035-35-1.
+    \bibitem{demel}
+    DEMEL, Jiří. \textit{Operační výzkum}.
 \end{thebibliography}
