--- a/latex/index.tex
+++ b/latex/index.tex
@@ -12,17 +12,29 @@
 \usepackage[pagestyles]{titlesec} % for customizing chapter titles
 \usepackage{parskip} % for no indent and space between paragraphs
 \usepackage{enumitem} % for customizing lists
+\usepackage{fancyhdr} % for customizing headers and footers
+\usepackage{bm}
+
 
 % for customizing bibliography title
 \addto{\captionsczech}{\renewcommand{\bibname}{Seznam zdrojů}}
-
-\renewcommand{\bibname}{Whatever floats your boat}
 
 % for customizing chapter titles
 \titleformat{\chapter}[display]{\normalfont\sffamily\bfseries}{}{0pt}{\Huge}
 \newpagestyle{mystyle}
 {\sethead[\thepage][][\chaptertitle]{}{}{\thepage}}
 \pagestyle{mystyle}
+
+\fancypagestyle{plain}{
+    \renewcommand{\headrulewidth}{0pt}
+    \fancyhf{}
+    \fancyfoot[R]{\thepage}
+}
+
+\pagestyle{fancy}
+\fancyhead{}
+\fancyhead[R]{\thesection}
+\fancyhead[L]{\rightmark}
 
 % for customizing section titles
 \titleformat{\section}{\normalfont\Large\sffamily\bfseries}{\thesection}{1em}{}
@@ -34,8 +46,7 @@
 \titleformat{\subsubsection}{\normalfont\sffamily\bfseries}{\thesubsubsection}{1em}{}
 
 \author{Petr Kotlan}
-\title{Optimalizace investičních prostředků z hlediska
-výnosu fotovoltaických elektráren}
+\title{Optimalizace investičních prostředků z hlediska výnosu fotovoltaických elektráren}
 \date{}
 
 \begin{document}
@@ -48,7 +59,7 @@ výnosu fotovoltaických elektráren}
 \addcontentsline{toc}{chapter}{Úvod}
 \chapter*{Úvod}
 
-\chapter{Současné modely výnosů \\ fotovoltaických elektráren v ČR}
+\chapter{Současné modely výnosů fotovoltaických elektráren v ČR}
 
 \chapter{Teoretická část}
 
