--- a/latex/index.tex
+++ b/latex/index.tex
@@ -3,6 +3,7 @@
 
 \usepackage[czech]{babel} % czech language
 \usepackage{amssymb} % for math symbols
+\usepackage{amsmath} % for math symbols
 \usepackage{pdfpages} % for including pdf files
 \usepackage{microtype} % better text rendering
 \usepackage[T1]{fontenc} % better text rendering
