--- a/latex/components/citace.tex
+++ b/latex/components/citace.tex
@@ -1,8 +1,12 @@
 \begin{thebibliography}{9}
     \bibitem{ote}
-    \textit{Krátkodobé trhy}. Online. OTE. C2018. Dostupné z: \url{https://www.ote-cr.cz/cs/kratkodobe-trhy/elektrina/vnitrodenni-trh}. [cit. 2023-12-03].
+    \textit{Krátkodobé trhy}. Online. OTE. C2018. Dostupné z: \url{https://www.ote-cr.cz/cs/kratkodobe-trhy/elektrina/vnitrodenni-trh}.
     \bibitem{matematika_pro_ekonomy}
     STOLÍN, Radek. \textit{Matematika pro ekonomy}. 2., upr. vyd. Jihlava: Vysoká škola polytechnická Jihlava, 2011. ISBN ISBN978-80-87035-35-1.
     \bibitem{demel}
-    DEMEL, Jiří. \textit{Operační výzkum}.
+    DEMEL, Jiří. \textit{Operační výzkum}. Dostupné z: \url{https://kix.fsv.cvut.cz/~demel/ped/ov/ov.pdf}.
+    \bibitem{tzb-jakfotovoltaikasetripenize}
+    \textit{Stroj na peníze: Fotovoltaika při vysokých cenách elektřiny ušetří desetitisíce korun ročně}. Online. TZB-info - Portál pro stavebnictví, technická zařízení budov. 2001. Dostupné z: \url{https://oze.tzb-info.cz/fotovoltaika/24229-stroj-na-penize-fotovoltaika-pri-vysokych-cenach-elektriny-usetri-desetitisice-korun-rocne}.
+    \bibitem{fotovia-typy}
+    \textit{Typy fotovoltaických elektráren}. Online. Fotovia. 2023. Dostupné také z: \url{https://www.fotovia.cz/blog/typy-fotovoltaickych-elektraren}.
 \end{thebibliography}
