blank pages, first pages

--- a/latex/components/abstrakt.tex
+++ b/latex/components/abstrakt.tex
@@ -1,7 +1,23 @@
-\thispagestyle{plain}
+\thispagestyle{empty}
 
+\textsc{Optimalizace investičních prostředků z hlediska výnosu fotovoltaických elektráren}
+
+\vspace{0.5cm}
 
 \textbf{Abstrakt}
 
+\textbf{Klíčová slova}
+
+fotovoltaika, lineární programování, optimalizace, investice
+
+\vspace{0.7cm}
+
+\textsc{Optimization of investment funds in terms of photovoltaic power plants}
+
+\textbf{Abstract}
+
+\textbf{Keywords}
+
+photovoltaics, linear programming, optimization, investment
 
 \newpage
