--- a/latex/components/titlepage.tex
+++ b/latex/components/titlepage.tex
@@ -3,7 +3,7 @@
         \Huge
 
         % \textbf{Univerzita Jana Evangelisty Purkyně \\v Ústí nad Labem}
-        \textbf{\textsf{\textls*[-20]{Univerzita Jana Evangelisty Purkyně \\v Ústí nad Labem}}}
+        \textbf{\textsf{\textls*[-25]{Univerzita Jana Evangelisty Purkyně \\v Ústí nad Labem}}}
             
         \vspace{1cm}
         \LARGE
@@ -13,7 +13,7 @@
         \includegraphics[width=0.5\textwidth]{static/PřF-UJEP-logo.png}
         \vspace{3cm}
             
-        \textbf{\textsf{Optimalizace investičních prostředků \\z hlediska výnosu fotovoltaických elektráren}}
+        \textbf{\textsf{\textls*[-25]{Optimalizace investičních prostředků \\z hlediska výnosu fotovoltaických elektráren}}}
         
         \vspace{1cm}
 
