--- a/latex/index.tex
+++ b/latex/index.tex
@@ -22,7 +22,7 @@
 
 % toc font
 \renewcommand{\cfttoctitlefont}{\normalfont\Huge\sffamily\bfseries}
-\renewcommand{\cftchapfont}{\sffamily\bfseries\normalsize}
+\renewcommand{\cftchapfont}{\sffamily\normalsize}
 \renewcommand{\cftsecfont}{\sffamily\normalsize}
 
 
