--- a/latex/components/citace.tex
+++ b/latex/components/citace.tex
@@ -9,4 +9,10 @@
     \textit{Stroj na peníze: Fotovoltaika při vysokých cenách elektřiny ušetří desetitisíce korun ročně}. Online. TZB-info - Portál pro stavebnictví, technická zařízení budov. 2001. Dostupné z: \url{https://oze.tzb-info.cz/fotovoltaika/24229-stroj-na-penize-fotovoltaika-pri-vysokych-cenach-elektriny-usetri-desetitisice-korun-rocne}.
     \bibitem{fotovia-typy}
     \textit{Typy fotovoltaických elektráren}. Online. Fotovia. 2023. Dostupné také z: \url{https://www.fotovia.cz/blog/typy-fotovoltaickych-elektraren}.
+    \bibitem{fotovia-komponenty}
+    \textit{Komponenty FVE}. Online. Fotovia. 2023. Dostupné také z: \url{https://www.fotovia.cz/komponenty-fve}.
+    \bibitem{moneta-npv}
+    \textit{Co čistá současná hodnota?}. Online. MONETA Money Bank. Dostupné z: \url{https://www.moneta.cz/slovnik-pojmu/detail/npv}.
+    \bibitem{moneta-roi}
+    \textit{Co je ROI?}. Online. MONETA Money Bank. Dostupné z: \url{https://www.moneta.cz/slovnik-pojmu/detail/roi}.
 \end{thebibliography}
