--- a/latex/index.tex
+++ b/latex/index.tex
@@ -21,6 +21,7 @@
 \usepackage{textcase} % for uppercasing text
 \usepackage{tikz} % for drawing
 \usepackage{float} % for floating images
+\usepackage{siunitx} % for SI units
 
 % toc font
 \renewcommand{\cfttoctitlefont}{\normalfont\Huge\sffamily\bfseries}
