--- a/latex/index.tex
+++ b/latex/index.tex
@@ -22,6 +22,7 @@
 \usepackage{tikz} % for drawing
 \usepackage{float} % for floating images
 \usepackage{siunitx} % for SI units
+\usepackage{caption} % for customizing captions
 
 % toc font
 \renewcommand{\cfttoctitlefont}{\normalfont\Huge\sffamily\bfseries}
@@ -33,24 +34,22 @@
 % for customizing bibliography title
 \addto{\captionsczech}{\renewcommand{\bibname}{Seznam zdrojů}}
 
-% for customizing chapter titles
-\titleformat{\chapter}[display]{\normalfont\sffamily\bfseries}{}{0pt}{\Huge}
-\newpagestyle{mystyle}
-{\sethead[\thepage][][\chaptertitle]{}{}{\thepage}}
-\pagestyle{mystyle}
-
 \fancypagestyle{plain}{
     \renewcommand{\headrulewidth}{0pt}
     \fancyhf{}
-    \fancyfoot[C]{\thepage}
+    \fancyfoot[C]{\sffamily\selectfont\thepage}
 }
 
-\pagestyle{fancy}
+\pagestyle{plain}
 \fancyhead{}
-\fancyhead[R]{\rightmark}
-\fancyhead[L]{\thechapter\ \chaptername}
+\fancyhead[R]{\sffamily\rightmark} % Use \sffamily here
+\fancyhead[L]{\sffamily\thechapter\ \chaptername} % Use \sffamily here
+\renewcommand{\headrulewidth}{0.4pt}
 
 \renewcommand{\sectionmark}[1]{\markright{#1}}
+
+% for customizing chapter titles
+\titleformat{\chapter}[display]{\normalfont\sffamily\bfseries}{}{0pt}{\Huge}
 
 % for customizing section titles
 \titleformat{\section}{\normalfont\Large\sffamily\bfseries}{\thesection}{1em}{}
@@ -60,6 +59,11 @@
 
 % for customizing subsubsection titles (no new lines after title)
 \titleformat{\subsubsection}[runin]{\normalfont\sffamily\bfseries}{\thesubsubsection}{1em}{}
+
+\DeclareCaptionLabelFormat{myformat}{\sffamily#1 #2}
+\captionsetup[figure]{labelformat=myformat}
+
+
 
 \author{Petr Kotlan}
 \title{Optimalizace investičních prostředků z hlediska výnosu fotovoltaických elektráren}
