--- a/latex/components/citace.tex
+++ b/latex/components/citace.tex
@@ -22,5 +22,8 @@
 
     \bibitem{matematika_pro_ekonomy}
     STOLÍN, Radek. \textit{Matematika pro ekonomy}. 2., upr. vyd. Jihlava: Vysoká škola polytechnická Jihlava, 2011. ISBN ISBN978-80-87035-35-1.
+
+    \bibitem{python-pulp}
+    MITCHELL, Stuart; KEAN, Anita; MASON, Andrew; O'SULLIVAN, Michael a PHILLIPS, Antony. \textit{Optimization with PuLP}. Online. COIN-OR Documentation Site. C2009. Dostupné z: \url{https://coin-or.github.io/pulp/}.
     
 \end{thebibliography}
