--- a/latex/index.tex
+++ b/latex/index.tex
@@ -106,9 +106,13 @@
 \chapter{Přehled problematiky fotovoltaiky}
 \renewcommand{\chaptername}{Přehled problematiky fotovoltaiky}
 
-Úvodní část si klade za cíl seznámit čtenáře s základními pojmy z oblasti fotovoltaiky.
+V úvodní kapitole je popsána základní problematika fotovoltaických elektráren.
+Je zde uveden základní technický popis, jednotlivé komponenty ze kterých se elektrárna skládá a druhy systémů, které se v praxi využívají.
 
 \input{chapters/fotovol.tex}
+
+\chapter{Investiční možnosti}
+\renewcommand{\chaptername}{Investiční možnosti}
 
 \chapter{Teoretická část}
 \renewcommand{\chaptername}{Teoretická část}
