--- a/latex/index.tex
+++ b/latex/index.tex
@@ -103,23 +103,12 @@
 \chapter*{Úvod}
 
 % \chapter{Současné modely výnosů fotovoltaických elektráren v ČR}
-\chapter{Přehled problematiky fotovoltaiky}
-\renewcommand{\chaptername}{Přehled problematiky fotovoltaiky}
-
-V úvodní kapitole je popsána základní problematika fotovoltaických elektráren.
-Je zde uveden základní technický popis, jednotlivé komponenty ze kterých se elektrárna skládá a druhy systémů, které se v praxi využívají.
-
+\chapter{Fotovoltaika}
+\renewcommand{\chaptername}{Fotovoltaika}
 \input{chapters/fotovol.tex}
-
-\chapter{Investiční možnosti}
-\renewcommand{\chaptername}{Investiční možnosti}
 
 \chapter{Teoretická část}
 \renewcommand{\chaptername}{Teoretická část}
-
-Tato kapitola je rozdělena do dvou částí. První část se zabývá základními ekonomickými pojmy využívanými v investiční analýze.
-Druhá část se zabývá matematickou optimalizací metodou lineárního programování.
-
 \input{chapters/pojmy.tex}
 
 % \section{Základní modely matematické optimalizace}
