--- a/latex/components/citace.tex
+++ b/latex/components/citace.tex
@@ -8,17 +8,14 @@
     \bibitem{fotovia-typy}
     \textit{Typy fotovoltaických elektráren}. Online. Fotovia. 2023. Dostupné také z: \url{https://www.fotovia.cz/blog/typy-fotovoltaickych-elektraren}.
     
-    \bibitem{moneta-npv}
-    \textit{Co čistá současná hodnota?}. Online. MONETA Money Bank. Dostupné z: \url{https://www.moneta.cz/slovnik-pojmu/detail/npv}.
-    
-    \bibitem{moneta-roi}
-    \textit{Co je ROI?}. Online. MONETA Money Bank. Dostupné z: \url{https://www.moneta.cz/slovnik-pojmu/detail/roi}.
-    
     \bibitem{ote}
     \textit{Krátkodobé trhy}. Online. OTE. C2018. Dostupné z: \url{https://www.ote-cr.cz/cs/kratkodobe-trhy/elektrina/vnitrodenni-trh}.
     
     \bibitem{tzb-jakfotovoltaikasetripenize}
     \textit{Stroj na peníze: Fotovoltaika při vysokých cenách elektřiny ušetří desetitisíce korun ročně}. Online. TZB-info - Portál pro stavebnictví, technická zařízení budov. 2001. Dostupné z: \url{https://oze.tzb-info.cz/fotovoltaika/24229-stroj-na-penize-fotovoltaika-pri-vysokych-cenach-elektriny-usetri-desetitisice-korun-rocne}.
+
+    \bibitem{tzb-info}
+    \textit{Fotovoltaika}. Online. TZB-info - Portál pro stavebnictví, technická zařízení budov. 2001.. Dostupné z: \url{https://oze.tzb-info.cz/fotovoltaika}.
 
     \bibitem{matematika_pro_ekonomy}
     STOLÍN, Radek. \textit{Matematika pro ekonomy}. 2., upr. vyd. Jihlava: Vysoká škola polytechnická Jihlava, 2011. ISBN ISBN978-80-87035-35-1.
@@ -26,4 +23,7 @@
     \bibitem{python-pulp}
     MITCHELL, Stuart; KEAN, Anita; MASON, Andrew; O'SULLIVAN, Michael a PHILLIPS, Antony. \textit{Optimization with PuLP}. Online. COIN-OR Documentation Site. C2009. Dostupné z: \url{https://coin-or.github.io/pulp/}.
     
+    \bibitem{moneta}
+    \textit{Slovník pojmů z finančnictví a bankovnictví}. Online. MONETA Money Bank. Dostupné z: https://www.moneta.cz/slovnik-pojmu.
+
 \end{thebibliography}
